@@ -210,7 +210,7 @@
 #define AUTO_NOTIFY_SUBJECT "NEW MAIL NOTIFICATION"
 
 /* input reading linelimit */
-#define MAX_LINESIZE (65*1024)
+#define MAX_LINESIZE (64*1024)
 
 /* string length for query */
 #define DEF_QUERYSIZE 1024
