@@ -1,3 +1,11 @@
+2008-08-26  Paul J Stevens <paul@nfg.nl>
+
+	* src/dbmail-mailbox.c, src/dbmail.h.in, src/imap4.c, 
+	src/modules/authldap.c:
+	set MAX_LINESIZE to 64k and silence a couple of compiler warnings
+	* src/dm_db.c:
+	use the mailQuota field in ldap during delivery (fixes: #721)
+
 2008-08-25  Paul J Stevens <paul@nfg.nl>
 
 	* src/imapcommands.c:
